// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarToggler should render correctly 1`] = `
.c0 {
  z-index: 15;
  fill: #FFF !important;
}

.c0:hover {
  fill: #FFF !important;
}

.c1 {
  fill: #545456;
  width: 20px;
  height: 20px;
  cursor: pointer;
}

.c1:hover {
  fill: #757679;
}

@media (min-width:48rem) {
  .c0 {
    display: none;
  }
}

<NavbarToggler
  onToggle={[MockFunction]}
  toggled={false}
>
  <Styled(Icon)
    name="hamburgerMenu"
    onClick={[MockFunction]}
  >
    <Icon
      className="c0"
      name="hamburgerMenu"
      onClick={[MockFunction]}
      selectable={true}
      size="20px"
    >
      <Styled(hamburgerMenu)
        className="c0"
        onClick={[MockFunction]}
        selectable="1"
        size="20px"
      >
        <hamburgerMenu
          className="c0 c1"
          height="32"
          onClick={[MockFunction]}
          selectable="1"
          size="20px"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="c0 c1"
            height="32"
            onClick={[MockFunction]}
            selectable="1"
            size="20px"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              hamburger-menu
            </title>
            <path
              d="M0 23.592h32v4.128H0v-4.128zM0 13.936h32v4.128H0v-4.128zM0 4.28h32v4.128H0V4.28z"
            />
          </svg>
        </hamburgerMenu>
      </Styled(hamburgerMenu)>
    </Icon>
  </Styled(Icon)>
</NavbarToggler>
`;

exports[`NavbarToggler should render correctly with toggled 1`] = `
.c0 {
  z-index: 15;
  fill: #FFF !important;
}

.c0:hover {
  fill: #FFF !important;
}

.c1 {
  fill: #545456;
  width: 20px;
  height: 20px;
  cursor: pointer;
}

.c1:hover {
  fill: #757679;
}

@media (min-width:48rem) {
  .c0 {
    display: none;
  }
}

<NavbarToggler
  onToggle={[MockFunction]}
  toggled={true}
>
  <Styled(Icon)
    name="closeFilled"
    onClick={[MockFunction]}
  >
    <Icon
      className="c0"
      name="closeFilled"
      onClick={[MockFunction]}
      selectable={true}
      size="20px"
    >
      <Styled(closeFilled)
        className="c0"
        onClick={[MockFunction]}
        selectable="1"
        size="20px"
      >
        <closeFilled
          className="c0 c1"
          height="32"
          onClick={[MockFunction]}
          selectable="1"
          size="20px"
          viewBox="0 0 32 32"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            className="c0 c1"
            height="32"
            onClick={[MockFunction]}
            selectable="1"
            size="20px"
            viewBox="0 0 32 32"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title>
              close-filled
            </title>
            <path
              d="M31.432.568c-.301-.301-.717-.487-1.176-.487s-.875.186-1.176.487L17.176 12.472c-.301.301-.717.487-1.176.487s-.875-.186-1.176-.487L2.92.568C2.619.267 2.203.081 1.744.081S.869.267.568.568C.267.869.081 1.285.081 1.744s.186.875.487 1.176l11.904 11.904c.301.301.487.717.487 1.176s-.186.875-.487 1.176L.568 29.08c-.301.301-.487.717-.487 1.176s.186.875.487 1.176c.301.301.717.487 1.176.487s.875-.186 1.176-.487l11.904-11.904c.301-.301.717-.487 1.176-.487s.875.186 1.176.487L29.08 31.432c.301.301.717.487 1.176.487s.875-.186 1.176-.487c.301-.301.487-.717.487-1.176s-.186-.875-.487-1.176L19.528 17.176c-.301-.301-.487-.717-.487-1.176s.186-.875.487-1.176L31.432 2.92c.301-.301.487-.717.487-1.176s-.186-.875-.487-1.176z"
            />
          </svg>
        </closeFilled>
      </Styled(closeFilled)>
    </Icon>
  </Styled(Icon)>
</NavbarToggler>
`;
